# reputation-bot

./: .env.example  README.md  pyproject.toml
telegram_bot_core/: manage.py
telegram_bot_core/bot/: main.py  models.py  speed_test.py
telegram_bot_core/bot/management/commands/: run_bot.py
telegram_bot_core/bot/templates/: member_statistic.html  top_members.html
telegram_bot_core/static/css/: bot.css
telegram_bot_core/static/exel_templates/: member_statistic.xlsx
telegram_bot_core/static/js/: checkImages.js  get_div_size.js
telegram_bot_core/telegram_bot_core/: asgi.py  settings.py  urls.py  wsgi.py
