[tool.poetry]
name = "karma-tg-bot"
version = "0.1.0"
description = ""
authors = ["<alexgrig.cyber@gmail.com>"]
readme = "README.md"
packages = [{include = "karma_tg_bot_14"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.6"
django = "^4.2.6"
environs = "^9.5.0"
psycopg2-binary = "^2.9.9"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
pyppeteer = "^1.0.2"
pillow = "^10.1.0"
openpyxl = "^3.1.2"
pymupdf = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
